[gd_scene load_steps=15 format=2]

[ext_resource path="res://art_assets/sprites/Mobs/angler_monster.PNG" type="Texture" id=1]
[ext_resource path="res://Scenes/Prefabs/MobPrefabs/Mob.gd" type="Script" id=7]

[sub_resource type="CapsuleShape2D" id=7]
radius = 9.0
height = 0.0

[sub_resource type="CircleShape2D" id=3]
radius = 9.0

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "float_left"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=6]
resource_name = "float_right"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="AnimationNodeAnimation" id=11]
animation = "float_right"

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "float_left"

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "float_right"

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "float_left"

[sub_resource type="AnimationNodeBlendSpace2D" id=8]
blend_point_0/node = SubResource( 11 )
blend_point_0/pos = Vector2( 0, 1.1 )
blend_point_1/node = SubResource( 12 )
blend_point_1/pos = Vector2( 0, -1.1 )
blend_point_2/node = SubResource( 13 )
blend_point_2/pos = Vector2( 1.1, 0 )
blend_point_3/node = SubResource( 14 )
blend_point_3/pos = Vector2( -1.1, 0 )
min_space = Vector2( -1.1, -1.1 )
max_space = Vector2( 1.1, 1.1 )

[sub_resource type="AnimationNodeStateMachine" id=9]
states/Idle-and-Float/node = SubResource( 8 )
states/Idle-and-Float/position = Vector2( 342, 80 )
start_node = "Idle-and-Float"

[sub_resource type="AnimationNodeStateMachinePlayback" id=10]

[node name="AnglerMob" type="Area2D"]
z_index = 2
collision_layer = 257
collision_mask = 640
script = ExtResource( 7 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -2 )
texture = ExtResource( 1 )
hframes = 4
vframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 7 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="LightCheckArea2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 512

[node name="CollisionShape2D" type="CollisionShape2D" parent="LightCheckArea2D"]
shape = SubResource( 3 )

[node name="PlayerRayCast2D" type="RayCast2D" parent="."]
cast_to = Vector2( 0, 0 )
collision_mask = 128
collide_with_areas = true
collide_with_bodies = false

[node name="TerrainRayCast2D" type="RayCast2D" parent="."]
cast_to = Vector2( 0, 0 )
collision_mask = 64
collide_with_areas = true

[node name="ShadowCheckTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="ConsumedTimer" type="Timer" parent="."]
one_shot = true

[node name="BounceTimer" type="Timer" parent="."]
one_shot = true

[node name="JiggleTimer" type="Timer" parent="."]
wait_time = 0.07

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="MobAnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 4 )
anims/float_left = SubResource( 5 )
anims/float_right = SubResource( 6 )

[node name="MobAnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 9 )
anim_player = NodePath("../MobAnimationPlayer")
active = true
parameters/playback = SubResource( 10 )
parameters/Idle-and-Float/blend_position = Vector2( 0.998681, -0.798286 )

[connection signal="body_entered" from="." to="." method="_on_Mob_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="ShadowCheckTimer" to="." method="_on_ShadowCheckTimer_timeout"]
[connection signal="timeout" from="ConsumedTimer" to="." method="_on_ConsumedTimer_timeout"]
[connection signal="timeout" from="JiggleTimer" to="." method="_on_JiggleTimer_timeout"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
